--- a/Skeleton/Api/Tests/Application/Query/GetQueryTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Query/GetQueryTest.php.twig
@@ -14,7 +14,7 @@ class GetQueryTest extends \PHPUnit_Framework_TestCase
 
     public function setUp()
     {
-        $this->query = new GetQuery("00c1ab20-6e1e-4c54-83b4-62e677aba7ec");
+        $this->query = new GetQuery('00c1ab20-6e1e-4c54-83b4-62e677aba7ec');
     }
 
     public function testInterface()
