--- a/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/actions/delete.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/actions/delete.php.twig
@@ -7,5 +7,5 @@
 
         $this->controller->deleteAction();
         Phake::verify($this->deleteHandler, Phake::times(1))->process($command);
-        Phake::verify($this->responseHandler, Phake::times(1))->create(["message" => '1 row deleted'], Response::HTTP_OK);
+        Phake::verify($this->responseHandler, Phake::times(1))->create(['message' => '1 row deleted'], Response::HTTP_OK);
     }
