--- a/Skeleton/Api/Tests/Application/Command/Handler/Decorator/PatchCommandHandlerDecoratorTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/Decorator/PatchCommandHandlerDecoratorTest.php.twig
@@ -24,14 +24,18 @@ class PatchCommandHandlerDecoratorTest extends \PHPUnit_Framework_TestCase
         $this->command = Phake::mock(PatchCommand::class);
         $this->commandHandler = Phake::mock(PatchCommandHandler::class);
 
-        Phake::when($this->commandHandler)->process(Phake::anyParameters())->thenReturn("some result");
+        Phake::when($this->commandHandler)->process(Phake::anyParameters())->thenReturn('some result');
 
         $this->validationHandler = Phake::mock(PatchCommandValidationHandler::class);
 
         $this->specHandler = Phake::mock(PatchCommandSpecHandler::class);
         Phake::when($this->specHandler )->process(Phake::anyParameters())->thenReturn(null);
 
-        $this->commandHandlerDecorator = new PatchCommandHandlerDecorator($this->commandHandler, $this->validationHandler,$this->specHandler);
+        $this->commandHandlerDecorator = new PatchCommandHandlerDecorator(
+                                                $this->commandHandler,
+                                                $this->validationHandler,
+                                                $this->specHandler
+                                         );
     }
 
     public function testInterfaces()
@@ -42,7 +46,7 @@ class PatchCommandHandlerDecoratorTest extends \PHPUnit_Framework_TestCase
     public function testProcess()
     {
         $result = $this->commandHandlerDecorator->process($this->command);
-        $this->assertEquals("some result", $result);
+        $this->assertEquals('some result', $result);
         Phake::verify($this->validationHandler, Phake::times(1))->process(Phake::anyParameters());
         Phake::verify($this->commandHandler, Phake::times(1))->process(Phake::anyParameters());
 
