--- a/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/ControllerTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/ControllerTest.php.twig
@@ -33,11 +33,11 @@ class ControllerTest extends \PHPUnit_Framework_TestCase
         $this->resolver = Phake::mock(ResolverStrategy::class);
         $this->responseHandler = Phake::mock(ResponseHandler::class);
 
-        $this->entity = ["id" => "00c1ab20-6e1e-4c54-83b4-62e677aba7ec"];
+        $this->entity = ['id' => '00c1ab20-6e1e-4c54-83b4-62e677aba7ec'];
 
         Phake::when($this->responseHandler)->create(Phake::anyParameters())->thenReturn($this->responseHandler);
         Phake::when($this->responseHandler)->getResponse(Phake::anyParameters())->thenReturn(Phake::mock(Response::class));
-        Phake::when($this->request)->getContent(Phake::anyParameters())->thenReturn(json_encode(["id"=>123456]));
+        Phake::when($this->request)->getContent(Phake::anyParameters())->thenReturn(json_encode(['id'=>123456]));
 
 {% set controllerArgs ="" %}
 {% for commandQueryResponsibilitySegregation in controllerData %}
