Refactor line to length become < 120

--- a/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
@@ -17,9 +17,9 @@ class NewCommandTest extends \PHPUnit_Framework_TestCase
 {% set constructorArgs = "" %}
 {% for field in entityFields %}
         $this->{{ field.name }} = '123456';
-{% set constructorArgs = constructorArgs ~ "$this->" ~ field.name ~ "," %}
+{% set constructorArgs = constructorArgs ~ "$this->" ~ field.name ~ ',\n              ' %}
 {% endfor %}
-        $this->command = new NewCommand({{ constructorArgs|trim(",")}});
+        $this->command = new NewCommand({{ constructorArgs|trim(",\n              ")}});
     }
 
     public function testInterface()
