--- a/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/ControllerTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/ControllerTest.php.twig
@@ -45,11 +45,15 @@ class ControllerTest extends \PHPUnit_Framework_TestCase
 
         $this->{{ commandQueryResponsibilitySegregation.action }}Handler = Phake::mock({{ commandQueryResponsibilitySegregation.action }}{{ group }}Handler::class);;
         Phake::when($this->{{ commandQueryResponsibilitySegregation.action }}Handler)->process(Phake::anyParameters())->thenReturn($this->entity);
-{% set controllerArgs = controllerArgs  ~ "$this->" ~ commandQueryResponsibilitySegregation.action ~ "Handler, "%}
+{% set controllerArgs = controllerArgs  ~ "                                           " ~ "$this->" ~ commandQueryResponsibilitySegregation.action ~ group ~ 'Handler,\n '%}
 {% endif %}
 {% endfor %}
 
-        $this->controller = new Controller($this->request, $this->resolver, $this->responseHandler, {{ controllerArgs|trim(", ") }});
+        $this->controller = new Controller($this->request,
+                                           $this->resolver,
+                                           $this->responseHandler,
+{{ controllerArgs|trim(", ") }}
+                                            );
     }
 
 {% for commandQueryResponsibilitySegregation in controllerData %}
