--- a/Skeleton/Api/Tests/Presentation/Coordination/Entity/Query/ControllerTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Coordination/Entity/Query/ControllerTest.php.twig
@@ -44,10 +44,13 @@ class ControllerTest extends \PHPUnit_Framework_TestCase
         $this->{{ commandQueryResponsibilitySegregation.action }}{{ group }}Handler = Phake::mock({{ commandQueryResponsibilitySegregation.action }}{{ group }}Handler::class);;
         Phake::when($this->{{ commandQueryResponsibilitySegregation.action }}{{ group }}Handler)->process(Phake::anyParameters())->thenReturn($this->entity);
 {% endif %}
-{% set controllerArgs = controllerArgs  ~ "$this->" ~ commandQueryResponsibilitySegregation.action ~ group ~ "Handler, "%}
+        {% set controllerArgs = controllerArgs  ~ "                                           " ~ "$this->" ~ commandQueryResponsibilitySegregation.action ~ group ~ 'Handler,\n'%}
 {% endfor %}
 
-        $this->controller = new Controller($this->request, $this->resolver, $this->responseHandler, {{ controllerArgs|trim(", ") }});
+        $this->controller = new Controller($this->request,
+                                           $this->resolver,
+                                           $this->responseHandler,
+{{ controllerArgs|trim(',\n') }});
 
     }
 
