--- a/Skeleton/Api/Tests/Application/Command/DeleteCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/DeleteCommandTest.php.twig
@@ -6,6 +6,14 @@ namespace  Tests\Application\Country\Command;
 use {{ projectName }}\Application\{{ entityName }}\Command\DeleteCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
+
+/**
+* Class DeleteCommandTest
+* This class permits to test the DeleteCommand class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Command
+**/
 class DeleteCommandTest extends \PHPUnit_Framework_TestCase
 {
     protected $command;
@@ -13,6 +21,9 @@ class DeleteCommandTest extends \PHPUnit_Framework_TestCase
     protected $transaction;
     protected $jsonRequest;
 
+    /**
+    * Configure the tests
+    */
     public function setUp()
     {
 
@@ -23,6 +34,9 @@ class DeleteCommandTest extends \PHPUnit_Framework_TestCase
         $this->command = new DeleteCommand($this->entityId, $this->revision);
     }
 
+    /**
+    * Test that DeleteCommand is instanceOf CommandInterface
+    */
     public function testInterface()
     {
         $this->assertInstanceOf(CommandInterface::class, $this->command);
