--- a/Skeleton/Api/Tests/Application/Command/Handler/Decorator/PatchCommandHandlerDecoratorTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/Decorator/PatchCommandHandlerDecoratorTest.php.twig
@@ -11,7 +11,13 @@ use {{ projectName }}\Application\{{ entityName }}\Command\Handler\Decorator\Pat
 use {{ projectName }}\Application\{{ entityName }}\Command\Validation\ValidationHandler\PatchCommandValidationHandler;
 use \Phake;
 
-
+/**
+* Class PatchCommandHandlerDecoratorTest
+* This class permits to test the PatchCommandHandlerDecorator class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Command\Handler
+**/
 class PatchCommandHandlerDecoratorTest extends \PHPUnit_Framework_TestCase
 {
     protected $commandHandlerDecorator;
@@ -19,6 +25,9 @@ class PatchCommandHandlerDecoratorTest extends \PHPUnit_Framework_TestCase
     protected $commandHandler;
     protected $command;
 
+    /**
+    * Configure the tests
+    */
     public function setUp()
     {
         $this->command = Phake::mock(PatchCommand::class);
