--- a/Skeleton/Api/Tests/Application/Command/Handler/DeleteCommandHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/DeleteCommandHandlerTest.php.twig
@@ -10,12 +10,22 @@ use {{ projectName }}\Application\{{ entityName }}\Command\DeleteCommand;
 use {{ projectName }}\Domain\Workflow\{{ entityName }}\Handler\DeleteWFHandler;
 use \Phake;
 
+/**
+* Class DeleteCommandHandlerTest
+* This class permits to test the DeleteCommandHandler class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Command\Handler
+**/
 class DeleteCommandHandlerTest extends \PHPUnit_Framework_TestCase
 {
     protected $amanager;
     protected $commandHandler;
     protected $command;
 
+    /**
+    * Configure the tests
+    */
     public function setUp()
     {
         $this->manager = \Phake::mock(CountryManager::class);
