--- a/Skeleton/Api/Tests/Application/Command/Handler/NewCommandHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/NewCommandHandlerTest.php.twig
@@ -9,12 +9,22 @@ use {{ projectName }}\Application\{{ entityName }}\Command\NewCommand;
 use {{ projectName }}\Domain\Workflow\{{ entityName }}\Handler\NewWFHandler;
 use \Phake;
 
+/**
+* Class NewCommandHandlerTest
+* This class permits to test the NewCommandHandler class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Command\Handler
+**/
 class NewCommandHandlerTest extends \PHPUnit_Framework_TestCase
 {
     protected $workflowHandler;
     protected $commandHandler;
     protected $command;
 
+    /**
+    * Configure the tests
+    */
     public function setUp()
     {
         $this->command = Phake::mock(NewCommand::class);
