--- a/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
@@ -5,6 +5,13 @@ namespace  Tests\Application\{{ entityName }}\Command;
 use {{ projectName }}\Application\Country\Command\NewCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
+/**
+* Class NewCommandTest
+* This class permits to test the NewCommand class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Command
+*/
 class NewCommandTest extends \PHPUnit_Framework_TestCase
 {
     protected $command;
@@ -12,16 +19,24 @@ class NewCommandTest extends \PHPUnit_Framework_TestCase
     protected $transaction;
     protected $jsonRequest;
 
+    /**
+    * Configure the tests
+    */
     public function setUp()
     {
 {% set constructorArgs = "" %}
 {% for field in entityFields %}
         $this->{{ field.name }} = '123456';
-{% set constructorArgs = constructorArgs ~ "$this->" ~ field.name ~ ',\n              ' %}
+{% set constructorArgs = constructorArgs ~ "                                        " ~ "$this->" ~ field.name ~ ",\n" %}
 {% endfor %}
-        $this->command = new NewCommand({{ constructorArgs|trim(",\n              ")}});
+        $this->command = new NewCommand(
+{{ constructorArgs|trim(",\n")}}
+                         );
     }
 
+    /**
+    * Test NewCommand is instanceof CommandInterface
+    */
     public function testInterface()
     {
         $this->assertInstanceOf(CommandInterface::class, $this->command);
