--- a/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
@@ -6,6 +6,14 @@ namespace  Tests\Application\{{ entityName }}\Command;
 use {{ projectName }}\Application\{{ entityName }}\Command\PatchCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
+
+/**
+* Class PatchCommandTests
+* This class permits to test the PatchCommand class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Command
+**/
 class PatchCommandTest extends \PHPUnit_Framework_TestCase
 {
     protected $command;
@@ -13,17 +21,25 @@ class PatchCommandTest extends \PHPUnit_Framework_TestCase
     protected $transaction;
     protected $jsonRequest;
 
+    /**
+    * Configure the tests
+    */
     public function setUp()
     {
 {% set constructorArgs = "" %}
 {% for field in entityFields %}
         $this->{{ field.name }} = '123456';
-{% set constructorArgs = constructorArgs ~ "$this->" ~ field.name ~ ", " %}
+{% set constructorArgs = constructorArgs ~ "                                        " ~ "$this->" ~ field.name ~ ",\n" %}
 {% endfor %}
 
-        $this->command = new PatchCommand({{ constructorArgs|trim(', ') }});
+        $this->command = new PatchCommand(
+{{ constructorArgs|trim(',\n') }}
+                              );
     }
 
+    /**
+    * Test PatchCommand is instanceof CommandInterface
+    */
     public function testInterface()
     {
         $this->assertInstanceOf(CommandInterface::class, $this->command);
