--- a/Skeleton/Api/Tests/Application/Query/GetQueryTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Query/GetQueryTest.php.twig
@@ -5,6 +5,13 @@ namespace  Tests\Application\{{ entityName }}\Query;
 use {{ projectName }}\Application\{{ entityName }}\Query\GetQuery;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\QueryInterface;
 
+/**
+* Class GetQueryTest
+* This class permits to test the GetQuery class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Query
+**/
 class GetQueryTest extends \PHPUnit_Framework_TestCase
 {
     protected $query;
