--- a/Skeleton/Api/Tests/Application/Query/Handler/GetQueryHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Query/Handler/GetQueryHandlerTest.php.twig
@@ -5,6 +5,13 @@ namespace  Tests\Application\{{ entityName }}\Query;
 use {{ projectName }}\Application\{{ entityName }}\Query\GetAllQuery;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\QueryInterface;
 
+/**
+* Class GetQueryHandlerTest
+* This class permits to test the GetQueryHandler class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Query\Handler
+**/
 class GetQueryHandlerTest extends \PHPUnit_Framework_TestCase
 {
     protected $query;
