--- a/Skeleton/Api/Tests/Application/Query/Handler/SearchByQueryHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Query/Handler/SearchByQueryHandlerTest.php.twig
@@ -5,6 +5,13 @@ namespace  Tests\Application\{{ entityName }}\Query;
 use {{ projectName }}\Application\{{ entityName }}\Query\SearchByQuery;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\QueryInterface;
 
+/**
+* Class SearchByQueryHandlerTest
+* This class permits to test the SearchByQueryHandler class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Query\Handler
+**/
 class GetAllQueryHandlerTest extends \PHPUnit_Framework_TestCase
 {
     protected $query;
