--- a/Skeleton/Api/Tests/Application/Query/SearchByQueryTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Query/SearchByQueryTest.php.twig
@@ -5,6 +5,13 @@ namespace  Tests\Application\{{ entityName }}\Query;
 use {{ projectName }}\Application\{{ entityName }}\Query\SearchByQuery;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\QueryInterface;
 
+/**
+* Class SearchByQueryTest
+* This class permits to test the SearchByQuery class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Application\Query
+**/
 class SearchByQueryTest extends \PHPUnit_Framework_TestCase
 {
     protected $query;
