--- a/Skeleton/Api/Tests/Presentation/Coordination/Entity/Query/ControllerTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Coordination/Entity/Query/ControllerTest.php.twig
@@ -22,10 +22,17 @@ use Sfynx\DddBundle\Layer\Presentation\Response\Handler\ResponseHandler;
 
 use Symfony\Component\HttpFoundation\Response;
 
-
+/**
+* Class ControllerTest
+* This class permits to test the Controller class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Presentation\Coordination\Presentation
+**/
 class ControllerTest extends \PHPUnit_Framework_TestCase
 {
 
+    /* Configure the test */
     public function setUp()
     {
         $this->request = Phake::mock(SymfonyStrategy::class);
