--- a/Skeleton/Api/Tests/Presentation/Request/Entity/Command/NewRequestTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Request/Entity/Command/NewRequestTest.php.twig
@@ -13,6 +13,13 @@ use DemoCountry\Presentation\Request\Country\Command\NewRequest;
 use \Phake;
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Resolver\ResolverStrategy;
 
+/**
+* Class NewRequestTest
+* This class permits to test the NewRequest class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Presentation\Request\Command
+**/
 class NewRequestTest extends \PHPUnit_Framework_TestCase
 {
 
@@ -29,6 +36,8 @@ class NewRequestTest extends \PHPUnit_Framework_TestCase
      */
     protected $request;
 
+
+    /* configure the test */
     public function setUp()
     {
         $this->SymfonyStrategy = Phake::mock(SymfonyStrategy::class);
@@ -37,6 +46,8 @@ class NewRequestTest extends \PHPUnit_Framework_TestCase
 
     }
 
+
+    /* Verify that request implements QueryRequestInterface */
     public function testGetRequestInterface()
     {
         $this->assertInstanceof(CommandRequestInterface::class, $this->request);
