--- a/Skeleton/Api/Tests/Presentation/Request/Entity/Query/GetRequestTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Request/Entity/Query/GetRequestTest.php.twig
@@ -14,6 +14,13 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Resolver\ResolverI
 use \Phake;
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Resolver\ResolverStrategy;
 
+/**
+* Class GetRequestTest
+* This class permits to test the GetRequest class
+* @category {{ projectName }}
+* @package Test
+* @subpackage Presentation\Request\Query
+**/
 class GetRequestTest extends \PHPUnit_Framework_TestCase
 {
 
@@ -30,6 +37,7 @@ class GetRequestTest extends \PHPUnit_Framework_TestCase
      */
     protected $request;
 
+    /* Configure the test */
     public function setUp()
     {
         $this->SymfonyStrategy = Phake::mock(SymfonyStrategy::class);
@@ -38,6 +46,7 @@ class GetRequestTest extends \PHPUnit_Framework_TestCase
 
     }
 
+    /* Verify that request implements QueryRequestInterface */
     public function testGetRequestInterface()
     {
         $this->assertInstanceof(QueryRequestInterface::class, $this->request);
